New API for service logs
